--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#45046a</color>
     <color name="colorPrimaryDark">#5c2a9d</color>
     <color name="colorAccent">#b5076b</color>
-    <color name="colorCream">#f1ebbb</color>
+    <color name="colorCream">#F1EFDE</color>
+    <color name="colorDarkerCream">#F3F0D5</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
 
