Cambios en el workflow de las activitys y se crean nuevas activitys, se crea una clase que contiene todos los métodos de llamadas al servidor, se hacen pruebas con nuevas solicitudes Get y Post, todo funciona correctamente.

--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewAccount">
+    tools:context=".Auth.NewAccount">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailTextNewAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45"
@@ -28,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.6"
