Se limpia el código, añadimos Spinner y creamos métodos de llamada tipo get para rellenar el spinner con el listado de productos, también se le añade acciones de prueba al seleccionar los objetos. Limpiamos parvialmente el código.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.65" />
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/manualButton"
         android:layout_width="350dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_buttons"
